After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720330 - Gtk-CRITICAL **: gtk_entry_completion_set_model: assertion 'GTK_IS_ENTRY_COMPLETION (completion)' failed
Gtk-CRITICAL **: gtk_entry_completion_set_model: assertion 'GTK_IS_ENTRY_COMP...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2013-12-12 14:15 UTC by Volker Sobek (weld)
Modified: 2014-05-22 02:51 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Volker Sobek (weld) 2013-12-12 14:15:08 UTC
I get this warning every time I hide the location entry in the filechooser. Happens with master and 3.10.

  • #0 g_logv
    at gmessages.c line 989
  • #1 g_log
    at gmessages.c line 1025
  • #2 g_return_if_fail_warning
    at gmessages.c line 1034
  • #3 gtk_entry_completion_set_model
    at gtkentrycompletion.c line 1129
  • #4 populate_completion_store
    at gtkfilechooserentry.c line 523
  • #5 set_completion_folder
    at gtkfilechooserentry.c line 587
  • #6 refresh_current_folder_and_file_part
    at gtkfilechooserentry.c line 615
  • #7 g_object_notify_queue_thaw
    at gobject.c line 292
  • #8 g_object_thaw_notify
    at gobject.c line 1278
  • #9 gtk_widget_unparent
    at gtkwidget.c line 4233
  • #10 gtk_box_remove
    at gtkbox.c line 2056
  • #11 g_cclosure_marshal_VOID__OBJECTv
    at gmarshal.c line 1312
  • #12 _g_closure_invoke_va
    at gclosure.c line 840
  • #13 g_signal_emit_valist
    at gsignal.c line 3238
  • #14 g_signal_emit
    at gsignal.c line 3386
  • #15 gtk_container_remove
    at gtkcontainer.c line 1576
  • #16 gtk_widget_dispose
    at gtkwidget.c line 11268
  • #17 g_object_run_dispose
    at gobject.c line 1067
  • #18 gtk_widget_destroy
    at gtkwidget.c line 4268
  • #19 location_switch_to_path_bar
    at gtkfilechooserdefault.c line 2041
  • #20 location_mode_set
    at gtkfilechooserdefault.c line 2123
  • #21 g_closure_invoke
    at gclosure.c line 777
  • #22 signal_emit_unlocked_R
    at gsignal.c line 3516
  • #23 g_signal_emitv
    at gsignal.c line 3063
  • #24 gtk_binding_entry_activate
    at gtkbindings.c line 652
  • #25 binding_activate
    at gtkbindings.c line 1524
  • #26 gtk_bindings_activate_list
    at gtkbindings.c line 1585
  • #27 gtk_bindings_activate_event
    at gtkbindings.c line 1672
  • #28 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #29 _g_closure_invoke_va
    at gclosure.c line 840
  • #30 g_signal_emit_valist
    at gsignal.c line 3238
  • #31 g_signal_emit
    at gsignal.c line 3386
  • #32 gtk_widget_event_internal
    at gtkwidget.c line 7168
  • #33 gtk_widget_event
    at gtkwidget.c line 6830
  • #34 gtk_window_propagate_key_event
    at gtkwindow.c line 7253
  • #35 gtk_window_key_press_event
    at gtkwindow.c line 7283
  • #36 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #37 _g_closure_invoke_va
    at gclosure.c line 840
  • #38 g_signal_emit_valist
    at gsignal.c line 3238
  • #39 g_signal_emit
    at gsignal.c line 3386
  • #40 gtk_widget_event_internal
    at gtkwidget.c line 7168
  • #41 propagate_event
    at gtkmain.c line 2488
  • #42 gtk_main_do_event
    at gtkmain.c line 1714
  • #43 gdk_event_source_dispatch
    at gdkeventsource.c line 364
  • #44 g_main_dispatch
    at gmain.c line 3066
  • #45 g_main_context_dispatch
    at gmain.c line 3642
  • #46 g_main_context_iterate
    at gmain.c line 3713
  • #47 g_main_context_iteration
    at gmain.c line 3774
  • #48 g_application_run
    at gapplication.c line 1635
  • #49 main